Refactor portfolio layout and update dependencies; change favicon and title to reflect personal branding

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -9,7 +9,7 @@
   },
   "home": {
     "greeting": "Hi, I'm",
-    "name": "Andrés Mazo",
+    "name": "Andrés Zapata Mazo",
     "title": "Full Stack Developer",
     "description": "I create exceptional digital experiences that combine attractive design with efficient functionality. Passionate about solving problems through clean and elegant code.",
     "viewProjects": "View Projects",
@@ -20,16 +20,220 @@
   "about": {
     "title": "About Me",
     "subtitle": "Get to know me better",
+    "aboutMeTitle": "Who I Am",
     "description": "As a Full Stack Developer with extensive experience in web development, I focus on creating intuitive and powerful digital solutions. With a solid foundation in both front-end and back-end technologies, I enjoy taking on complex challenges and transforming them into elegant, user-centered applications.",
+    "additionalInfo": "I'm constantly learning and staying up-to-date with the latest technologies and best practices in the industry. I believe in writing clean, maintainable code and creating intuitive user experiences.",
     "education": "Education",
-    "experience": "Experience"
+    "experience": "Experience",
+    "downloadResume": "Download Resume",
+    "imageAlt": "Andrés Zapata Mazo profile picture",
+    "skillsTitle": "Skills",
+    "education1Title": "Oracle Next Education Back",
+    "education1Institution": "Alura Latam - Oracle",
+    "education1Year": "NOVEMBER 2022 - JUNE 2023",
+    "education1Description": "Course focused on backend development and programming fundamentals.",
+    "education2Title": "Data Science",
+    "education2Institution": "La Escuela Superior de Administración Pública",
+    "education2Year": "AUGUST 2022 - OCTOBER 2022",
+    "education2Description": "Diploma specializing in data science fundamentals and applications.",
+    "education3Title": "Full Stack Web Developer",
+    "education3Institution": "Digital House - Argentina",
+    "education3Year": "NOVEMBER 2021 - JUNE 2022",
+    "education3Description": "Comprehensive course covering modern web development technologies and practices.",
+    "education4Title": "Sound Engineering",
+    "education4Institution": "University of San Buenaventura, Medellín",
+    "education4Year": "JANUARY 2013 - AUGUST 2018",
+    "education4Description": "Bachelor's Degree in Sound Engineering, covering audio technology, acoustics, and sound design.",
+    "experience1Title": "Full Stack Software Developer (Bilingual)",
+    "experience1Company": "Pacific Workers",
+    "experience1Year": "NOVEMBER 2024 - PRESENT",
+    "experience1Description": "Development and maintenance of applications and automations using React, Redux, JavaScript, Node.js, and Cypress for scalable web platforms. Designed database models with Prisma ORM and integrated AWS services (ECS, S3, Lambda, CodeCommit, Amplify, CloudWatch). Implemented CI/CD pipelines.",
+    "experience1Skills": [
+      "TypeScript",
+      "JavaScript",
+      "React",
+      "MySQL",
+      "AWS",
+      "Node.js",
+      "Prisma",
+      "REST API",
+      "Scrum",
+      "Cypress",
+      "Version Control",
+      "Redux.js",
+      "CI/CD",
+      "Debugging",
+      "Mockups"
+    ],
+    "experience2Title": "Full Stack Developer",
+    "experience2Company": "Think IT",
+    "experience2Year": "FEBRUARY 2024 - NOVEMBER 2024",
+    "experience2Description": "Development, design, maintenance, deployment, and testing of Front End and Back End for various web platforms using agile methodologies. Additionally, requirement analysis, data quality analysis, and documentation development for projects including Observatorio ICFES, AppUI Comptroller General, and more.",
+    "experience2Skills": [
+      "React",
+      "WordPress",
+      "Python",
+      "AWS",
+      "AWS Athena",
+      "AWS S3",
+      "AWS Lambda",
+      "Node.js",
+      "MySQL",
+      "SCSS",
+      "Angular",
+      "Angular Material",
+      "HTML5",
+      "API REST",
+      "Mockups",
+      "Data Analysis",
+      "Scrum"
+    ],
+    "experience3Title": "Full Stack Developer - Freelance",
+    "experience3Company": "ATV - ANTIVIRUS PARA LA DESERCIÓN",
+    "experience3Year": "MAY 2023 - JULY 2024",
+    "experience3Description": "Developed Front End and Back End for a web platform in React.js with user interfaces, scheduling, and academic records. Supported requirements gathering for the University of Antioquia, using MySQL databases. Maintained a PHP-based platform.",
+    "experience3Skills": [
+      "React",
+      "JavaScript",
+      "PHP",
+      "MySQL",
+      "Redux.js",
+      "CSS",
+      "Node.js",
+      "Express.js",
+      "HTML5",
+      "Docker",
+      "API REST",
+      "Google API",
+      "Mockups",
+      "Data Analysis",
+      "Scrum"
+    ],
+    "experience4Title": "Full Stack Developer - Freelance",
+    "experience4Company": "Editorial UDEA",
+    "experience4Year": "FEBRUARY 2024 - MARCH 2024",
+    "experience4Description": "Development of Front End and Back End for the University of Antioquia's editorial office platform in Angular. This includes user interfaces by type, product inventory, accounting module, report generation, and alert messaging, with MySQL relational databases.",
+    "experience4Skills": [
+      "Angular",
+      "Java",
+      "TypeScript",
+      "MySQL",
+      "SCSS",
+      "Angular Material",
+      "HTML5",
+      "API REST",
+      "Mockups",
+      "Data Analysis",
+      "Scrum"
+    ],
+    "experience5Title": "Full Stack Developer - Freelance",
+    "experience5Company": "SATMED - Sistema de Alertas Tempranas",
+    "experience5Year": "AUGUST 2022 - MAY 2023",
+    "experience5Description": "Developed and maintained the web platform for the registration and characterization of alert situations in Medellín. Built using VUE.js with responsive design in Bootstrap, and Node.js for the Back End, based on TypeScript.",
+    "experience5Skills": [
+      "VUE.js",
+      "TypeScript",
+      "JavaScript",
+      "MySQL",
+      "CSS",
+      "Node.js",
+      "API-REST",
+      "Bootstrap",
+      "Express.js",
+      "HTML5",
+      "Scrum"
+    ],
+    "experience6Title": "Full Stack Developer - Freelance",
+    "experience6Company": "SISTEMA DE CARACTERIZACIÓN PRODEPAZ",
+    "experience6Year": "FEBRUARY 2022 - AUGUST 2022",
+    "experience6Description": "Developed Front End and Back End for new population characterization features in Antioquia's web platform and mobile app on the Play Store. Built using Angular, .NET, and Node.js for the backend.",
+    "experience6Skills": [
+      "Angular",
+      "Ionic",
+      "Cordova",
+      "JavaScript",
+      "TypeScript",
+      "Android",
+      "Play Store",
+      "MySQL",
+      "CSS",
+      "Node.js",
+      "Express.js",
+      "HTML5",
+      "API REST",
+      "Scrum"
+    ],
+    "experience7Title": "Director of Engineering",
+    "experience7Company": "Ambientes Inteligentes",
+    "experience7Year": "APRIL 2023 - DECEMBER 2023",
+    "experience7Description": "Led, coordinated, evaluated, and managed the engineering and development area for audio, video, programming, and automation projects, with a focus on UX/UI.",
+    "experience7Skills": [
+      "Visual Basic",
+      "Automation",
+      "Leadership",
+      "Project Management",
+      "Bosch",
+      "Kanban",
+      "UX/UI",
+      "Ease Acoustics",
+      "AutoCAD",
+      "CUE",
+      "Symetrix",
+      "UDP",
+      "TCP/IP",
+      "RS 232",
+      "Dante",
+      "Office"
+    ],
+    "experience8Title": "Project Engineer",
+    "experience8Company": "Ambientes Inteligentes",
+    "experience8Year": "DECEMBER 2020 - APRIL 2023",
+    "experience8Description": "Developed, designed, programmed, and led audio, video, and UX/UI automation projects.",
+    "experience8Skills": [
+      "Visual Basic",
+      "Automation",
+      "Leadership",
+      "Project Management",
+      "Bosch",
+      "Kanban",
+      "UX/UI",
+      "Ease Acoustics",
+      "AutoCAD",
+      "CUE",
+      "Symetrix",
+      "UDP",
+      "TCP/IP",
+      "RS 232",
+      "Dante",
+      "Office"
+    ],
+    "experience9Title": "Project Director",
+    "experience9Company": "Acustega",
+    "experience9Year": "DECEMBER 2017 - MARCH 2020",
+    "experience9Description": "Directed, developed, modeled, rendered, simulated, designed, and evaluated architectural acoustics projects, noise studies, and noise control projects. Coordinating and supervising carpentry, electro-luminous, and finishes.",
+    "experience9Skills": [
+      "Project Management",
+      "AutoCAD",
+      "Lumion",
+      "SketchUp",
+      "Vray",
+      "Ease Acoustics",
+      "Insul",
+      "Photoshop",
+      "Office",
+      "3D modeling",
+      "Rendering"
+    ],
+    "viewCode": "View Code",
+    "viewLiveSite": "View Live Site"
   },
   "projects": {
     "title": "Projects",
     "subtitle": "My recent works",
     "viewAll": "View All",
     "liveDemo": "Live Demo",
-    "viewCode": "View Code"
+    "viewCode": "View Code",
+    "viewProject": "View Project"
   },
   "skills": {
     "title": "Skills",
@@ -48,14 +252,13 @@
     "subtitle": "Let's work together",
     "name": "Name",
     "email": "Email",
+    "subject": "Subject",
     "message": "Message",
     "send": "Send Message",
+    "sending": "Sending...",
     "success": "Message sent successfully!",
-    "error": "Error sending message. Please try again."
-  }, "success": "Message sent successfully! I'll get back to you soon.",
-  "footer": {   "error": "Error sending message. Please try again.",
-    "madeWith": "Made with",    "thankYou": "Thank You!",
-   "rights": "All rights reserved.",   
+    "error": "Error sending message. Please try again.",
+    "thankYou": "Thank You!",
     "sorry": "Sorry!",
     "close": "Close",
     "phone": "Phone",
@@ -64,6 +267,15 @@
     "emailRequired": "Email is required",
     "emailInvalid": "Please enter a valid email",
     "subjectRequired": "Subject is required",
-    "messageRequired": "Message is required"
+    "messageRequired": "Message is required",
+    "contactSnackbar": "Thank you for contacting me! I look forward to getting back to you soon."
+  },
+  "footer": {
+    "madeWith": "Made with",
+    "rights": "All rights reserved."
+  },
+  "global": {
+    "thankYouVisit": "Thank you for visiting my portfolio! 🎉 I'm glad you're here! ",
+    "thankYouBottom": "Thank you for reaching the end! 🎉 I hope you found my portfolio interesting. If you have any questions or would like to discuss a potential collaboration, please don't hesitate to contact me. I'm always looking for new challenges and opportunities to grow professionally. Have a great day! 🚀"
   }
 }
