--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -9,7 +9,7 @@
   },
   "home": {
     "greeting": "Hola, soy",
-    "name": "Andrés Mazo",
+    "name": "Andrés Zapata Mazo",
     "title": "Desarrollador Full Stack",
     "description": "Creo experiencias digitales excepcionales que combinan diseño atractivo con funcionalidad eficiente. Apasionado por resolver problemas mediante código limpio y elegante.",
     "viewProjects": "Ver Proyectos",
@@ -20,16 +20,220 @@
   "about": {
     "title": "Sobre Mí",
     "subtitle": "Conóceme mejor",
+    "aboutMeTitle": "Quién Soy",
     "description": "Como Desarrollador Full Stack con amplia experiencia en desarrollo web, me enfoco en crear soluciones digitales intuitivas y potentes. Con una base sólida tanto en tecnologías front-end como back-end, disfruto enfrentando desafíos complejos y transformándolos en aplicaciones elegantes centradas en el usuario.",
+    "additionalInfo": "Constantemente estoy aprendiendo y manteniéndome actualizado con las últimas tecnologías y mejores prácticas de la industria. Creo en escribir código limpio y mantenible, y en crear experiencias de usuario intuitivas.",
     "education": "Educación",
-    "experience": "Experiencia"
+    "experience": "Experiencia",
+    "downloadResume": "Descargar Hoja de Vida",
+    "imageAlt": "Foto de perfil de Andrés Zapata Mazo",
+    "skillsTitle": "Habilidades",
+    "education1Title": "Oracle Next Education Back",
+    "education1Institution": "Alura Latam - Oracle",
+    "education1Year": "NOVIEMBRE 2022 - JUNIO 2023",
+    "education1Description": "Curso enfocado en desarrollo backend y fundamentos de programación.",
+    "education2Title": "Ciencia de Datos",
+    "education2Institution": "La Escuela Superior de Administración Pública",
+    "education2Year": "AGOSTO 2022 - OCTUBRE 2022",
+    "education2Description": "Diplomado especializado en fundamentos y aplicaciones de ciencia de datos.",
+    "education3Title": "Desarrollador Web Full Stack",
+    "education3Institution": "Digital House - Argentina",
+    "education3Year": "NOVIEMBRE 2021 - JUNIO 2022",
+    "education3Description": "Curso completo que cubre tecnologías y prácticas modernas de desarrollo web.",
+    "education4Title": "Ingeniería de Sonido",
+    "education4Institution": "Universidad de San Buenaventura, Medellín",
+    "education4Year": "ENERO 2013 - AGOSTO 2018",
+    "education4Description": "Título de Pregrado en Ingeniería de Sonido, cubriendo tecnología de audio, acústica y diseño sonoro.",
+    "experience1Title": "Desarrollador de Software Full Stack (Bilingüe)",
+    "experience1Company": "Pacific Workers",
+    "experience1Year": "NOVIEMBRE 2024 - PRESENTE",
+    "experience1Description": "Desarrollo y mantenimiento de aplicaciones y automatizaciones usando React, Redux, JavaScript, Node.js y Cypress para plataformas web escalables. Diseño de modelos de bases de datos con Prisma ORM e integración de servicios AWS (ECS, S3, Lambda, CodeCommit, Amplify, CloudWatch). Implementación de pipelines CI/CD.",
+    "experience1Skills": [
+      "TypeScript",
+      "JavaScript",
+      "React",
+      "MySQL",
+      "AWS",
+      "Node.js",
+      "Prisma",
+      "REST API",
+      "Scrum",
+      "Cypress",
+      "Control de Versiones",
+      "Redux.js",
+      "CI/CD",
+      "Depuración",
+      "Mockups"
+    ],
+    "experience2Title": "Desarrollador Full Stack",
+    "experience2Company": "Think IT",
+    "experience2Year": "FEBRERO 2024 - NOVIEMBRE 2024",
+    "experience2Description": "Desarrollo, diseño, mantenimiento, despliegue y pruebas de Front End y Back End para varias plataformas web utilizando metodologías ágiles. Adicionalmente, análisis de requerimientos, análisis de calidad de datos y desarrollo de documentación para proyectos como Observatorio ICFES, AppUI Contraloría General y más.",
+    "experience2Skills": [
+      "React",
+      "WordPress",
+      "Python",
+      "AWS",
+      "AWS Athena",
+      "AWS S3",
+      "AWS Lambda",
+      "Node.js",
+      "MySQL",
+      "SCSS",
+      "Angular",
+      "Angular Material",
+      "HTML5",
+      "API REST",
+      "Mockups",
+      "Análisis de Datos",
+      "Scrum"
+    ],
+    "experience3Title": "Desarrollador Full Stack - Freelance",
+    "experience3Company": "ATV - ANTIVIRUS PARA LA DESERCIÓN",
+    "experience3Year": "MAYO 2023 - JULIO 2024",
+    "experience3Description": "Desarrollo de Front End y Back End para una plataforma web en React.js con interfaces de usuario, programación y registros académicos. Apoyé la recopilación de requisitos para la Universidad de Antioquia, utilizando bases de datos MySQL. Mantuve una plataforma basada en PHP.",
+    "experience3Skills": [
+      "React",
+      "JavaScript",
+      "PHP",
+      "MySQL",
+      "Redux.js",
+      "CSS3",
+      "Node.js",
+      "Express.js",
+      "HTML5",
+      "Docker",
+      "API REST",
+      "Google API",
+      "Mockups",
+      "Análisis de Datos",
+      "Scrum"
+    ],
+    "experience4Title": "Desarrollador Full Stack - Freelance",
+    "experience4Company": "Editorial UDEA",
+    "experience4Year": "FEBRERO 2024 - MARZO 2024",
+    "experience4Description": "Desarrollo de Front End y Back End para la plataforma de la editorial de la Universidad de Antioquia en Angular, con interfaces de usuario, inventario de productos, módulo contable, generación de informes y mensajería, utilizando bases de datos MySQL.",
+    "experience4Skills": [
+      "Angular",
+      "Java",
+      "TypeScript",
+      "MySQL",
+      "SCSS",
+      "Angular Material",
+      "HTML5",
+      "API REST",
+      "Mockups",
+      "Análisis de Datos",
+      "Scrum"
+    ],
+    "experience5Title": "Desarrollador Full Stack - Freelance",
+    "experience5Company": "SATMED - Sistema de Alertas Tempranas",
+    "experience5Year": "AGOSTO 2022 - MAYO 2023",
+    "experience5Description": "Desarrollé y mantuve una plataforma web para situaciones de alerta en Medellín utilizando VUE.js con Bootstrap y Node.js basado en TypeScript. Implementé API-REST con MySQL.",
+    "experience5Skills": [
+      "VUE.js",
+      "TypeScript",
+      "JavaScript",
+      "MySQL",
+      "CSS3",
+      "Node.js",
+      "API-REST",
+      "Bootstrap",
+      "Express.js",
+      "HTML5",
+      "Scrum"
+    ],
+    "experience6Title": "Desarrollador Full Stack - Freelance",
+    "experience6Company": "SISTEMA DE CARACTERIZACIÓN PRODEPAZ",
+    "experience6Year": "FEBRERO 2022 - AGOSTO 2022",
+    "experience6Description": "Desarrollé Front End y Back End para características de caracterización de población en plataformas web y móviles utilizando Angular, .NET y Node.js con TypeScript, API-REST y MySQL.",
+    "experience6Skills": [
+      "Angular",
+      "Ionic",
+      "Cordova",
+      "JavaScript",
+      "TypeScript",
+      "Android",
+      "Play Store",
+      "MySQL",
+      "CSS3",
+      "Node.js",
+      "Express.js",
+      "HTML5",
+      "API REST",
+      "Scrum"
+    ],
+    "experience7Title": "Director de Ingeniería",
+    "experience7Company": "Ambientes Inteligentes",
+    "experience7Year": "ABRIL 2023 - DICIEMBRE 2023",
+    "experience7Description": "Lideré, coordiné, evalué y gestioné el área de ingeniería y desarrollo para proyectos de audio, video, programación y automatización, con enfoque en UX/UI.",
+    "experience7Skills": [
+      "Visual Basic",
+      "Automatización",
+      "Liderazgo",
+      "Gestión de Proyectos",
+      "Bosch",
+      "Kanban",
+      "UX/UI",
+      "Ease Acoustics",
+      "AutoCAD",
+      "CUE",
+      "Symetrix",
+      "UDP",
+      "TCP/IP",
+      "RS 232",
+      "Dante",
+      "Office"
+    ],
+    "experience8Title": "Ingeniero de Proyectos",
+    "experience8Company": "Ambientes Inteligentes",
+    "experience8Year": "DICIEMBRE 2020 - ABRIL 2023",
+    "experience8Description": "Desarrollé, diseñé, programé y lideré proyectos de automatización de audio, video y UX/UI.",
+    "experience8Skills": [
+      "Visual Basic",
+      "Automatización",
+      "Liderazgo",
+      "Gestión de Proyectos",
+      "Bosch",
+      "Kanban",
+      "UX/UI",
+      "Ease Acoustics",
+      "AutoCAD",
+      "CUE",
+      "Symetrix",
+      "UDP",
+      "TCP/IP",
+      "RS 232",
+      "Dante",
+      "Office"
+    ],
+    "experience9Title": "Director de Proyectos",
+    "experience9Company": "Acustega",
+    "experience9Year": "DICIEMBRE 2017 - MARZO 2020",
+    "experience9Description": "Dirigí, desarrollé, modelé, rendericé, simulé, diseñé y evalué proyectos de acústica arquitectónica, estudios de ruido y proyectos de control de ruido. Coordiné carpintería, electro-luminosos y acabados.",
+    "experience9Skills": [
+      "Gestión de Proyectos",
+      "AutoCAD",
+      "Lumion",
+      "SketchUp",
+      "Vray",
+      "Ease Acoustics",
+      "Insul",
+      "Photoshop",
+      "Office",
+      "Modelado 3D",
+      "Renderizado"
+    ],
+    "viewCode": "Ver Código",
+    "viewLiveSite": "Ver Sitio Web"
   },
   "projects": {
     "title": "Proyectos",
     "subtitle": "Mis trabajos recientes",
     "viewAll": "Ver Todos",
     "liveDemo": "Demo",
-    "viewCode": "Ver Código"
+    "viewCode": "Ver Código",
+    "viewProject": "Ver Proyecto"
   },
   "skills": {
     "title": "Habilidades",
@@ -48,14 +252,14 @@
     "subtitle": "Trabajemos juntos",
     "name": "Nombre",
     "email": "Correo",
+    "subject": "Asunto",
     "message": "Mensaje",
     "send": "Enviar Mensaje",
+    "sending": "Enviando...",
     "success": "¡Mensaje enviado con éxito!",
-    "error": "Error al enviar mensaje. Por favor intenta de nuevo."
-  }, "success": "¡Mensaje enviado con éxito! Me pondré en contacto pronto.",
-  "footer": {   "error": "Error al enviar mensaje. Por favor intenta de nuevo.",
-    "madeWith": "Hecho con",    "thankYou": "¡Gracias!",
-  "rights": "Todos los derechos reservados."   , "sorry": "¡Lo siento!",
+    "error": "Error al enviar mensaje. Por favor intenta de nuevo.",
+    "thankYou": "¡Gracias!",
+    "sorry": "¡Lo siento!",
     "close": "Cerrar",
     "phone": "Teléfono",
     "location": "Ubicación",
@@ -63,6 +267,15 @@
     "emailRequired": "El correo es obligatorio",
     "emailInvalid": "Por favor ingresa un correo válido",
     "subjectRequired": "El asunto es obligatorio",
-    "messageRequired": "El mensaje es obligatorio"
+    "messageRequired": "El mensaje es obligatorio",
+    "contactSnackbar": "¡Gracias por contactarme! Espero responderte pronto."
+  },
+  "footer": {
+    "madeWith": "Hecho con",
+    "rights": "Todos los derechos reservados."
+  },
+  "global": {
+    "thankYouVisit": "¡Gracias por visitar mi portafolio! 🎉  Me alegra que estés aquí! ",
+    "thankYouBottom": "¡Gracias por llegar hasta el final! 🎉 Espero que encuentres mi portafolio interesante. Si tienes alguna pregunta o te gustaría discutir una posible colaboración, no dudes en contactarme. Siempre estoy buscando nuevos desafíos y oportunidades para crecer profesionalmente. ¡Que tengas un excelente día! 🚀"
   }
 }
